cmake_minimum_required(VERSION 3.17)
project(OpencvYOLO)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE "Release")

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/opencv_YOLO)
find_package(OpencvYOLO)
message(${OpencvYOLO_INCLUDE_DIRS})
include_directories(${OpencvYOLO_INCLUDE_DIRS})
link_directories(${OpencvYOLO_LIBRARY_DIRS})
include_directories(./opencv_YOLO/include)
link_directories(./opencv_YOLO/lib)
add_executable(YOLO4 main.cpp YOLO.cpp YOLO.h)
target_link_libraries(YOLO4 ${OpencvYOLO_LIBRARIES})